# embedded-sensor-testbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
data/: demo_run.csv
docs/: github_setup.md  interview_notes.md  test_plan.md
firmware/sensor_testbench/: sensor_testbench.ino
src/testbench/: __init__.py  analysis.py  cli.py  serial_logger.py  simulate.py
tests/: test_analysis.py
