[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-sensor-testbench"
version = "0.1.0"
description = "Arduino sensor validation firmware and Python analysis tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Quang Bao Le" }
]
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
dev = []

[project.scripts]
sensor-testbench = "testbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
